@@ -1,0 +1,8 @@
+package io.realm.log;
+
+public interface RealmLog {
+
+
+
+
+}
