@@ -54,6 +54,9 @@ import io.realm.internal.Row;
 import io.realm.internal.SharedGroup;
 import io.realm.internal.Table;
 import io.realm.internal.TableView;
+import io.realm.internal.android.DebugAndroidLogger;
+import io.realm.internal.android.ReleaseAndroidLogger;
+import io.realm.internal.log.RealmLog;
 
 
 /**
@@ -133,6 +136,10 @@ public final class Realm implements Closeable {
     // Package protected to be reachable by proxy classes
     static final Map<String, Map<String, Long>> columnIndices = new HashMap<String, Map<String, Long>>();
 
+    static {
+        RealmLog.add(BuildConfig.DEBUG ? new DebugAndroidLogger() : new ReleaseAndroidLogger());
+    }
+
     protected void checkIfValid() {
         // Check if the Realm instance has been closed
         if (sharedGroup == null) {
@@ -179,7 +186,12 @@ public final class Realm implements Closeable {
             sharedGroup.close();
             sharedGroup = null;
         }
-        localRefCount.put(id, Math.max(0, references - 1));
+
+        int refCount = references - 1;
+        if (refCount < 0) {
+            RealmLog.w("Calling close() on a Realm that is already closed: " + getPath());
+        }
+        localRefCount.put(id, Math.max(0, refCount));
 
         if (handler != null) {
             handlers.remove(handler);
