@@ -8,6 +8,7 @@
  * Adding more precise imports in proxy classes to avoid ambiguous references.
  * Improved handling of empty model classes in the annotation processor
  * Added support for executing a transaction with a closure using Realm.executeTransaction().
+ * Fixed bug where calling Realm.close() too many times could result in Realm not getting closed at all. This now triggers a log warning.
 
 0.76.0
  * RealmObjects can now be imported using JSON.
